<resources>
    <string name="app_name">CoDesign</string>

    <!--STRINGS DE PANTALLA PRINCIPAL-->
    <string name="projectes_text">Projectes Actuals</string>
    <string name="nou_projecte">Nou Projecte</string>
    <string name="invi">Invitacions</string>

    <!--STRINGS DE PANTALLA CREACIO DE PROJECTES-->
    <string name="titol_nou_proj">Creació Del Projecte</string>
    <string name="nom_projecte">Nom del projecte:</string>
    <string name="administrador">Projecte amb administrador</string>
    <string name="exemple_projecte">Projecte A</string>
    <string name="participants">Participants: (Fer ADD per cadascun)</string>
    <string name="exemple_participants">joan@gmail.com</string>
    <string name="crear_projecte">Crear Projecte</string>
    <string name="addPart">Add</string>
    <string name="toastAdd">Participant afegit!</string>


    <!--STRINGS DE PANTALLA INVITACIONS-->
    <string name="titol_invi">Invitacions</string>
    <string name="backToList">Tornar a la Llista</string>

    <!--STRINGS DE PANTALLA PROJECTE-->
    <string name="edicio_pissarra">Editar Pissarra</string>
    <string name="afegir_nota">Afegir Nota</string>
    <string name="sizeUp">+ Mida</string>
    <string name="sizeDown">- Mida</string>
    <string name="undo">Desfer Accio</string>
    <string name="eraser">Goma</string>
    <string name="brush">Pinzell</string>
    <string name="acceptChanges">Acceptar Canvis</string>
    <string name="borrarToast">Projecte Borrat</string>
    <string name="black">#000000</string>
    <string name="white">#FFFFFF</string>
    <string name="red">#FF0000</string>

    <!--STRINGS DE PANTALLA NOTES-->
    <string name="textMoure">Sacsa el dispositiu per a borrar el text ràpidament</string>
    <string name="changeText">No tens cap accelerometre conectat en el dispositiu!</string>
    <string name="sacsat">Text Borrat</string>
    <string name="acceptNote">Acceptar</string>

    <!--STRINGS DE AFEGIR PARTICIPANTS-->
    <string name="afegirParticipants">Afegir Participants</string>
    <string name="afegir">Afegir</string>
    <string name="backToProject">Tornar al Projecte</string>
    <string name="nouPart">Nou Participant</string>

    <!--STRINGS DE MENUS-->
    <string name="exit">Sortir</string>
    <string name="menu_part">Afegir participants</string>
    <string name="menu_exit">Sortir del projecte</string>
    <string name="menu_borrar">Borrar el projecte</string>
    <string name="menu_popietats">Propietats de projecte</string>

    <!--STRINGS DE PANTALLA CONFIGURACIONS-->
    <string name="settings">Configuracions</string>
    <string name="settings_save">Guardar</string>
    <string name="settings_color">Color personalitzat del pinzell:</string>
    <string name="color_black">Negre</string>
    <string name="color_red">Vermell</string>
    <string name="color_blue">Blau</string>
    <string name="color_green">Verd</string>
    <string name="settings_connections">Preferencies de conexió:</string>
    <string name="wifi_type">Wi-Fi</string>
    <string name="any_type">Any Network</string>


    <!--STRINGS GLOBALS-->
    <string name="tornar">Tornar</string>
    <string name="id_key">idkey</string>
    <string name="empty">Aquest camp no pot estar buit.</string>

    <!--STRINGS ALERT DIALOG-->
    <string name="adTitle">Borrar Projecte</string>
    <string name="adMessage">Estas segur que vols eliminar el projecte de forma permanent?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <!--STRINGS DE LOGIN-->
    <string name="Login">Inciar Sessió</string>
    <string name="Mail">Correu Electrònic</string>
    <string name="Pass">Contraseña</string>
    <string name="Forgot">Has oblidat la contraseña?</string>
    <string name="noCon">No network operating!</string>
    <string name="wifiCon">Wifi Connected!</string>
    <string name="mobCon">Mobile Connected!</string>

    <!--STRINGS DE PANTALLA REUNIONS-->
    <string name="SaveMeeting">Guardar</string>
    <string name="EditMeeting">Editar</string>
    <string name="Meetings">Reunió</string>
    <string name="Back">Tornar</string>
    <string name="Marker">LLoc de la Reunió</string>
    <string name="NameMeeting">Nom de la Reunió:</string>
    <string name="TimeMeeting">Hora de la Reunió:</string>
    <string name="DescMeeting">Descripció:</string>
    <string name="NameExample">Example Titol</string>
    <string name="TimeExample">YYYY-MM-DD hh:mm:ss</string>
    <string name="DescExample">Description example</string>
    <string name="DescHint">Inserta la descripció aquí…</string>
    <string name="TitleHint">Títol de la Reunió</string>

    <!--STRINGS DE PANTALLA PARTICIPANTS-->
    <string name="TitleProperties">Nom del Projecte</string>
    <string name="ListProperties">Llista de Participants</string>

    <!--STRINGS DE CONNEXIONS-->
    <string name="WifiLost">S\'ha perdut la conexió Wi-Fi, vols continuar gastant dades?</string>
    <string name="ConnexionLost">S\'ha perdut la conexió a Internet, comprova la teva conexió i prova a accedir de nou.</string>
    <string name="NetworkIssues">Problemes de Xarxa</string>
    <string name="ConRes">ConRes</string>
    <string name="isConnected">isConnected</string>

    <!-- STRINGS DE REUNIONS-->
    <string name="dateFormat">yyyy-MM-dd HH:mm:ss</string>

    <!-- STRINGS FIRESTORE-->
    <string name="ColProj">projectes</string>
    <string name="ColMeet">reunions</string>
    <string name="notification_channel_id">iDKnsdnkefunDNWKnn3445</string>
    <string name="notification_channel_name">CoDesign Messaging</string>
    <string name="topicglobal">global</string>
</resources>
