<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
>

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/settings"
            android:textSize="34sp"
            android:textColor="@color/secondary"
            android:fontFamily="@font/worksans_light"
            android:background="@color/colorPrimary"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bot_layout"
        android:layout_below="@+id/top_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_color"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/group_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:checkedButton="@+id/Black">

            <RadioButton
                android:id="@+id/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_black"/>
            <RadioButton
                android:id="@+id/Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red"/>
            <RadioButton
                android:id="@+id/Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue"/>
            <RadioButton
                android:id="@+id/Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green"/>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_save"
            android:background="@drawable/rounded_button"
            android:layout_margin="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>