<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/projectes_text"
        android:textSize="34sp"
        android:textColor="@color/secondary"
        android:fontFamily="@font/worksans_light"
        android:background="@color/colorPrimary"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TitleProperties"
        android:textColor="@color/grey"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/ProjectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListProperties"
        android:textColor="@color/grey"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/participants_list"
            android:textSize="16sp"
            android:padding="10dp"
            />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/newParticipants"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/participants_list"
            android:padding="10dp"
            android:hint="@string/nouPart"
            />

        <Button
            android:id="@+id/afegirPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_button"
            android:elevation="5dp"
            android:text="@string/afegir" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/tornarProperties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tornar"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:elevation="10dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_tornar" />
    </LinearLayout>


</LinearLayout>