<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:text="@string/projectes_text"
    android:textSize="28sp"
    android:background="@color/backgroundColor"
    android:gravity="center_vertical"
    />

<fragment
    class="com.example.codesign.ProjectListFragment"
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:id="@+id/FrgListOld"
    tools:layout="@layout/fragment_project_list"
    android:layout_weight="1" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/backgroundColor">
    <Button
        android:id="@+id/NouProjecte"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/nou_projecte"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_new_project"/>

    <Button
        android:id="@+id/Invitacions"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/invi"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_invitacions"/>
</LinearLayout>

</LinearLayout>