<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/afegirParticipants"
        android:gravity="center"
        android:textSize="34sp"
        android:textColor="@color/secondary"
        android:fontFamily="@font/worksans_light"
        android:background="@color/colorPrimary"
        />
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bot_layout"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/newParticipants"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/input"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/nouPart"
        />

    <Button
        android:id="@+id/afegirPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:elevation="5dp"
        android:text="@string/afegir" />

</LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/participantsList">
            </TextView>
    </LinearLayout>

    </ScrollView>
<LinearLayout
    android:id="@+id/bot_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <Button
        android:id="@+id/tornarProj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToProject"
        android:background="@drawable/rounded_button"
        android:layout_margin="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/white"/>
</LinearLayout>

</RelativeLayout>