<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editNote"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/notesColor"
        android:gravity="center_horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="30dp">
    </EditText>

    <Button
        android:id="@+id/acceptarNote"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_tick"
        android:drawablePadding="10dp"
        android:padding="7dp"
        android:elevation="5dp"
        android:text="@string/acceptNote" />

    <TextView
        android:id="@+id/textAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textMoure"
        android:layout_marginBottom="10dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/tornarNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:padding="7dp"
            android:elevation="5dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_tornar"
            android:text="@string/backToProject"/>
    </LinearLayout>
</LinearLayout>